Fixing spacing.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -149,7 +149,8 @@ a:hover {
 
 
 .website_header {
-	border-spacing: 20px;
+	border-spacing: 0px;
+	padding: 100px;
 	border-radius: 20px;
 	max-height: 60px;
 	background-image: url("https://bpb-ca-c1.wpmucdn.com/mycentennial.sd43.bc.ca/dist/f/2812/files/2023/01/dots-6297146_1920.jpg");
